benchmarks/simulator-test/2026-03-17T14-18-19-390Z/xcodebuildmcp-run-3.stdout.txt
^DUsing scheme test configuration: Debug
🧪 Test: CalculatorApp
Workspace: /Users/cameroncooke/.codex/worktrees/43f4/XcodeBuildMCP/example_projects/iOS_Calculator/CalculatorApp.xcworkspace
Configuration: Debug
Target: iPhone 17 Pro
🧪 Finding available tests...
Resolved to 21 test(s):
- CalculatorAppTests/CalculatorAppTests/testAppLaunch
- CalculatorAppTests/CalculatorAppTests/testCalculationPerformance
- CalculatorAppTests/CalculatorAppTests/testCalculatorOperationsEnum
- CalculatorAppTests/CalculatorAppTests/testCalculatorServiceBasicOperation
- CalculatorAppTests/CalculatorAppTests/testCalculatorServiceChainedOperations
... and 16 more
[?25l│
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages.
🛠️
Compiling.
🛠️
Compiling
.[?25h[?25l│
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages
📦
Resolvingpackages.
📦
Resolvingpackages.
📦
Resolvingpackages.
📦
Resolvingpackages.
📦
Resolvingpackages.
📦
Resolvingpackages.
📦
Resolvingpackages.
📦
Resolvingpackages.
📦
Resolvingpackages..
📦
Resolvingpackages..
📦
Resolvingpackages..
📦
Resolvingpackages..
📦
Resolvingpackages..
📦
Resolvingpackages..
📦
Resolvingpackages..
📦
Resolvingpackages..
📦
Resolvingpackages...
📦
Resolvingpackages...
📦
Resolvingpackages...
📦
Resolvingpackages...
📦
Resolvingpackages...
📦
Resolvingpackages...
📦
Resolvingpackages...
📦
Resolvingpackages...
🧪
Runningtests(1,0failures)...
🧪
Runningtests(1,0failures)
🧪
Runningtests(1,0failures)
🧪
Runningtests(1,0failures)
🧪
Runningtests(1,0failures)
🧪
Runningtests(1,0failures
)[?25h/Users/cameroncooke/.codex/worktrees/43f4/XcodeBuildMCP/example_projects/iOS_Calculator/CalculatorAppTests/CalculatorAppTests.swift:52: error: XCTAssertEqual failed: ("0") is not equal to ("999") - This test should fail - display should be 0, not 999
[?25l│
🧪
Runningtests(13,1failure)
🧪
Runningtests(13,1failure)
🧪
Runningtests(13,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)...
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure)
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure).
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure)..
🧪
Runningtests(21,1failure).
.[?25hFailed Tests
CalculatorAppTests
✗ testCalculatorServiceFailure (0.009 seconds)
└─ XCTAssertEqual failed: ("0") is not equal to ("999") - This test should fail - display should be 0, not 999 (/Users/cameroncooke/.codex/worktrees/43f4/XcodeBuildMCP/example_projects/iOS_Calculator/CalculatorAppTests/CalculatorAppTests.swift:52)
Test Summary
Total: 21 Passed: 20 Failed: 1 Skipped: 0 Duration: 20.84s